k8s/postgres.yaml

apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: postgres
  namespace: cloudmon

spec:
  serviceName: postgres
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:

    metadata:
      labels:
        app: postgres

    spec:

      containers:

        - name: postgres

          image: postgres:18

          ports:
            - containerPort: 5432

          resources:

            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "400m"
              memory: "180Mi"

          volumeMounts:

            - name: postgres-storage
              mountPath: /var/lib/postgresql

          readinessProbe:

            exec:
              command:
                - pg_isready
                - -U
                - cloudmon_user
                - -d
                - cloudmon

            initialDelaySeconds: 10
            periodSeconds: 10

      volumes:

        - name: postgres-storage

          persistentVolumeClaim:
            claimName: postgres-data


---

apiVersion: v1
kind: Service

metadata:
  name: postgres
  namespace: cloudmon

spec:

  selector:
    app: postgres

  ports:

    - port: 5432
      targetPort: 5432

  clusterIP: None
