k8s/prometheus.yaml

apiVersion: apps/v1
kind: Deployment

metadata:
  name: prometheus
  namespace: cloudmon

spec:

  replicas: 1

  selector:
    matchLabels:
      app: prometheus

  template:

    metadata:
      labels:
        app: prometheus

    spec:

      containers:

        - name: prometheus

          image: prom/prometheus:v3.5.0

          args:

            - "--config.file=/etc/prometheus/prometheus.yml"

            - "--storage.tsdb.path=/prometheus"

            - "--storage.tsdb.retention.time=2h"

            - "--web.listen-address=0.0.0.0:9090"

          ports:

            - containerPort: 9090

          resources:

            requests:
              cpu: "50m"
              memory: "64Mi"

            limits:
              cpu: "250m"
              memory: "120Mi"

          volumeMounts:

            - name: prometheus-config
              mountPath: /etc/prometheus

            - name: prometheus-data
              mountPath: /prometheus

      volumes:

        - name: prometheus-config

          configMap:
            name: prometheus-config

        - name: prometheus-data

          emptyDir: {}


---

apiVersion: v1
kind: Service

metadata:
  name: prometheus
  namespace: cloudmon

spec:

  selector:
    app: prometheus

  ports:

    - port: 9090
      targetPort: 9090
