k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cloudmon-api
  namespace: cloudmon

spec:

  selector:
    app: cloudmon-api

  ports:

    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: ClusterIP
