k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cloudmon-ingress
  namespace: cloudmon

  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"

spec:

  ingressClassName: nginx

  rules:

    - http:

        paths:

          - path: /
            pathType: Prefix

            backend:

              service:
                name: cloudmon-api

                port:
                  number: 8000
